--- a/src/styles/blocks/section.scss
+++ b/src/styles/blocks/section.scss
@@ -28,6 +28,7 @@
   &__article {
     @include on-tablet {
       @include page-grid;
+
       grid-template-rows: repeat(4, auto);
     }
 
@@ -141,7 +142,7 @@
         margin-top: -50px;
         padding: 24px 21px 20px;
         z-index: 1;
-        box-shadow: 0px 2px 0px 0px $color-border-green;
+        box-shadow: 0 2px 0 0 $color-border-green;
 
         @include on-tablet {
           margin-inline: auto;
@@ -201,9 +202,10 @@
     height: 386px;
 
     &-cont {
+      @include page-grid;
+
       margin: 0;
       padding: 0;
-      @include page-grid;
       place-items: center;
       width: 100%;
       height: 100%;
