--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -2,8 +2,7 @@ $mobile-min-width: 320px;
 $tablet-min-width: 768px;
 $desktop-min-width: 1280px;
 $desktop-lg-min-width: 1440px;
-
-$color-white: #ffffff;
+$color-white: #fff;
 $color-black: #0f0e08;
 $color-drk-green: #1a5a4c;
 $color-border-green: rgba(26, 90, 76, 0.5);
@@ -11,7 +10,6 @@ $color-orange: #f14a27;
 $color-gray: #e0e0e0;
 $color-txt-h4: #687480;
 $color-txt-h5: #1a5a4c;
-
 $transition-duration: 0.3s;
 $pad-inline-mobile: 20px;
 $pad-inline-tablet: 34px;
