--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,141 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import './header/header';
+@import './exhibitions/exhibitions';
+@import './footer/footer';
+@import './gallery/gallery';
+@import './subscription/subscription';
+
 
 body {
   background: $c-gray;
+
+  &:has(.header__burger_menu:target) {
+    overflow: hidden;
+  }
+}
+
+* {
+  margin: 0;
+  scroll-behavior: smooth;
+  transition: all 0.5s;
+}
+
+.container {
+  padding-inline: 20px;
+
+  @include on-tablet {
+    padding-inline: 34px;
+  }
+
+  @include on-desktop {
+    padding-inline: 55px;
+  }
+
+  &--subscription {
+    height: 380px;
+    background: url(../images/exponats/footer-img-phone.png) no-repeat;
+    background-size: cover;
+    padding-top: 88px;
+
+    @include on-tablet {
+      background-image: url(../images/exponats/footer-img-tablet.png);
+      background-position: center;
+      padding-top: 100px;
+    }
+
+    @include on-desktop {
+      height: 550px;
+      background-image: url(../images/exponats/footer-img.png);
+    }
+  }
+
+  &--main-section {
+    @include on-tablet {
+      grid-column: 1 / 4;
+      grid-row: 1;
+    }
+
+    @include on-desktop {
+      grid-column: 1 / 5;
+    }
+  }
+
+  &--exhibitions {
+    @include on-tablet {
+      display: flex;
+      justify-content: center;
+    }
+  }
+}
+
+.menu {
+  &--footer {
+    padding-top: 40px;
+
+    @include on-tablet {
+      grid-column: 2 / 6;
+    }
+
+    @include on-desktop {
+      grid-column: 8 / -1;
+    }
+  }
+
+
+  &__navigation {
+    @include page-grid;
+
+    &--header {
+      display: flex;
+    }
+
+    &__section {
+      padding: 0;
+
+      &--1 {
+        grid-column: 1;
+
+        @include on-tablet {
+          grid-column: 1 / 3;
+        }
+      }
+
+      &--2 {
+        @include on-tablet {
+          grid-column: 4 / -1;
+          padding-left: 40px;
+        }
+      }
+    }
+  }
+
+  &__link {
+    list-style: none;
+    padding-bottom: 20px;
+
+    &__item {
+      text-decoration: none;
+      @include work-shedule-text;
+      font-weight: 400;
+
+      &:hover {
+        color: $red-color;
+        text-shadow: 1px 1px 2px $green-color, 0 0 1em $red-color, 0 0 0.2em $green-color;
+      }
+
+      &--header {
+        color: $white-color;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 16px;
+
+        @include on-desktop {
+          font-size: 22px;
+          line-height: 22px;
+        }
+      }
+    }
+  }
 }
