--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,14 @@
 $c-gray: #eee;
+$par-color: #4E4E4E;
+$h-color: #0F0E08;
+$green-color: #1A5A4C;
+$white-color: #FFFFFF;
+$grey-color: #687480;
+$button-color: #E0E0E0;
+$white-color: #FFFFFF;
+$red-color: #F14A27;
+$phone-min-width: 320px;
+$tablet-min-width: 768px;
+$desktop-min-width: 1028px;
+
+
