--- a/src/styles/subscription/subscription.scss
+++ b/src/styles/subscription/subscription.scss
@@ -16,6 +16,7 @@
 
     &__big_text {
       @include montserat;
+
       font-size: 36px;
       line-height: 36px;
       text-align: center;
@@ -50,7 +51,7 @@
       height: 50px;
       width: 220px;
       padding-left: 10px;
-      font-family: "Montserrat", sans-serif;
+      font-family: 'Montserrat', sans-serif;
       font-size: 14px;
       line-height: 14px;
       color: $par-color;
@@ -79,7 +80,9 @@
       background-color: $red-color;
       height: 50px;
       width: 50px;
+
       @include montserat;
+
       font-size: 30px;
       background-image: url(../images/icons/arrow-right-black.png);
       background-position: center;
