--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -22,18 +22,18 @@
 }
 
 @mixin lection {
-            display: flex;
-            align-items: center;
-            font-family: "IBM Plex Sans", sans-serif;
-            font-size: 14px;
-            font-weight: 500;
-            line-height: 14px;
-            text-align: left;
-            color: $grey-color;
+  display: flex;
+  align-items: center;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 14px;
+  text-align: left;
+  color: $grey-color;
 }
 
 @mixin date {
-  font-family: "IBM Plex Sans", sans-serif;
+  font-family: 'IBM Plex Sans', sans-serif;
   font-size: 14px;
   font-weight: 700;
   line-height: 21px;
@@ -41,7 +41,7 @@
 }
 
 @mixin montserat {
-  font-family: "Montserrat", sans-serif;
+  font-family: Montserrat, sans-serif;
   font-size: 45px;
   font-weight: 700;
   line-height: 45px;
@@ -75,11 +75,13 @@
 
   @include on-tablet {
     --columns: 6;
+
     column-gap: 30px;
   }
 
   @include on-desktop {
     --columns: 12;
+
     column-gap: 30px;
   }
 }
