--- a/src/styles/exhibitions/exhibitions.scss
+++ b/src/styles/exhibitions/exhibitions.scss
@@ -2,13 +2,13 @@
 margin-bottom: 50px;
 
   &__events {
-
     @include on-tablet {
       @include page-grid;
     }
 
     &__title {
       @include montserat;
+
       font-size: 36px;
       line-height: 36px;
       text-align: center;
@@ -79,6 +79,7 @@ margin-bottom: 50px;
 
           &__text {
             @include montserat;
+
             font-size: 28px;
             line-height: 28px;
             font-weight: 500;
@@ -114,7 +115,7 @@ margin-bottom: 50px;
   }
 
   &__lection {
-    box-shadow: 0px 2px 0px 0px #1A5A4C40;
+    box-shadow: 0 2px 0 0 #1A5A4C40;
     transform: translateY(-50px);
     background-color: $c-gray;
     padding-bottom: 20px;
@@ -146,7 +147,7 @@ margin-bottom: 50px;
     }
 
     &__text {
-      font-family: "Montserrat", sans-serif;
+      font-family: Montserrat, sans-serif;
       font-size: 28px;
       font-weight: 400;
       line-height: 28px;
