--- a/src/styles/subscription/subscription.scss
+++ b/src/styles/subscription/subscription.scss
@@ -51,7 +51,7 @@
       height: 50px;
       width: 220px;
       padding-left: 10px;
-      font-family: 'Montserrat', sans-serif;
+      font-family: Montserrat, sans-serif;
       font-size: 14px;
       line-height: 14px;
       color: $par-color;
