--- a/src/styles/blocks/_buttons.scss
+++ b/src/styles/blocks/_buttons.scss
@@ -15,8 +15,6 @@
   }
 
   &__text {
-    @include hover(scale, 1.05);
-
     color: $dark-text-color;
 
     font-family: $secondary-font;
@@ -26,6 +24,8 @@
   }
 
   &__link-block {
+    cursor: pointer;
+
     padding: 12px 13px;
 
     @include on-tablet {
