--- a/src/styles/page-stucture/_page.scss
+++ b/src/styles/page-stucture/_page.scss
@@ -6,6 +6,11 @@ h3 {
 }
 
 .page {
+
+  &:has(.page__menu:target) {
+    overflow: hidden;
+  }
+
   scroll-behavior: smooth;
 
   &__body {
@@ -19,6 +24,8 @@ h3 {
   &__content {
     @include page-grid;
     @include content-padding-inline;
+
+    max-width: $max-content-width;
   }
 
   &__menu {
