--- a/src/styles/page-stucture/_museum.scss
+++ b/src/styles/page-stucture/_museum.scss
@@ -55,6 +55,8 @@
     grid-column: 1 / -1;
     width: 280px;
 
+    @include hover(scale, 1.05);
+
     border: 1px solid $green;
 
     @include on-tablet {
