fix burger menu not hiding when clicked to open menue JS implemented

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -66,6 +66,10 @@
       width: 24px;
       height: 24px;
       background: url(../images/icons/burger-menu.png) no-repeat center/contain;
+
+      &--hide-show {
+        display: none;
+      }
     }
   }
 
