fixed Header typo, fixed cursors, fixed subscribe section as per mock-up

--- a/src/styles/blocks/section.scss
+++ b/src/styles/blocks/section.scss
@@ -163,7 +163,7 @@
           text-align: left;
         }
 
-        @include hover(transform, scale(1.05)){
+        @include hover(transform, scale(1.05)) {
           z-index: 10;
         }
       }
@@ -238,17 +238,36 @@
       color: white;
       text-align: center;
       padding-bottom: 20px;
+
+      @include on-tablet {
+        padding-bottom: 16px;
+      }
     }
 
     &-body {
       color: white;
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 18px;
       text-align: center;
       padding-bottom: 50px;
+
+      @include on-tablet {
+        padding-bottom: 64px;
+      }
+
+      @include on-desktop {
+        padding-bottom: 72px;
+      }
     }
 
     &-field {
       width: 100%;
       height: 50px;
+
+      @include on-tablet {
+        height: 70px;
+      }
     }
   }
 
