--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -33,6 +33,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      cursor: pointer;
 
       @include hover(transform, scale(1.05)) {
         z-index: 10;
