--- a/src/styles/blocks/entry-field.scss
+++ b/src/styles/blocks/entry-field.scss
@@ -6,6 +6,14 @@
   align-items: stretch;
   border: none;
 
+  @include on-tablet {
+    gap: 16px;
+  }
+
+  @include on-desktop {
+    gap: 30px;
+  }
+
   &__input {
     box-sizing: content-box;
     flex-grow: 1;
@@ -41,7 +49,13 @@
     align-items: center;
     justify-content: center;
 
+    @include on-tablet {
+      width: 70px;
+    }
+
     &-arrow {
+      cursor: pointer;
+
       @include hover(transform, scale(2)) {
         z-index: 10;
       }
