--- a/src/styles/_content-sections.scss
+++ b/src/styles/_content-sections.scss
@@ -1,4 +1,4 @@
-@import './content-sections/actual-events';
-@import './content-sections/gallery';
-@import './content-sections/lection';
-@import './content-sections/newsletter';
+@import '../styles/content-sections/actual-events';
+@import '../styles/content-sections/gallery';
+@import '../styles/content-sections/lection';
+@import '../styles/content-sections/newsletter';
