--- a/src/styles/content-sections/_newsletter.scss
+++ b/src/styles/content-sections/_newsletter.scss
@@ -15,7 +15,7 @@
     margin-inline: -55px;
   }
 
-  background-image: url(../images/newsletter/newsletter-bg.png);
+  background-image: url(../../images/newsletter/newsletter-bg.png);
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: cover;
