--- a/src/styles/page-stucture/_header.scss
+++ b/src/styles/page-stucture/_header.scss
@@ -1,7 +1,7 @@
 .header {
   grid-column: 1 / -1;
 
-  background: url(../../images/header-bg-mobile.png) no-repeat center / cover;
+  background: url(../images/header-bg-mobile.png) no-repeat center / cover;
 
   height: 300px;
   margin-inline: -20px;
@@ -10,7 +10,7 @@
     grid-column: 4 / -1;
 
     height: 384px;
-    background-image: url(../../images/header-bg-tablet.png);
+    background-image: url(../images/header-bg-tablet.png);
 
     margin: 0;
     margin-right: -39px;
@@ -20,7 +20,7 @@
     grid-column: 6 / -1;
 
     height: 655px;
-    background-image: url(../../images/header-bg-desktop.png);
+    background-image: url(../images/header-bg-desktop.png);
 
     margin-right: -55px;
   }
