--- a/src/styles/blocks/_icon.scss
+++ b/src/styles/blocks/_icon.scss
@@ -4,31 +4,31 @@
   height: 24px;
 
   &--burger-menu {
-    background-image: url(../../images/icons/icon-burger-menu.svg);
+    background-image: url(../images/icons/icon-burger-menu.svg);
   }
 
   &--close {
-    background-image: url(../../images/icons/icon-close.svg);
+    background-image: url(../images/icons/icon-close.svg);
   }
 
   &--right-arrow {
-    background-image: url(../../images/icons/icon-keybord-right-arrow.svg);
+    background-image: url(../images/icons/icon-keybord-right-arrow.svg);
 
     &-black {
-      background-image: url(../../images/icons/icon-keyboard-right-arrow--black.svg);
+      background-image: url(../images/icons/icon-keyboard-right-arrow--black.svg);
     }
   }
 
   &--facebook {
-    background-image: url(../../images/icons/facebook-letter-logo.svg);
+    background-image: url(../images/icons/facebook-letter-logo.svg);
   }
 
   &--insta {
-    background-image: url(../../images/icons/instagram-logo.svg);
+    background-image: url(../images/icons/instagram-logo.svg);
   }
 
   &--arrow-up {
-    background-image: url(../../images/icons/arrow-up.svg);
+    background-image: url(../images/icons/arrow-up.svg);
 
     background-size: cover;
     width: 16px;
