--- a/src/styles/_page-structure.scss
+++ b/src/styles/_page-structure.scss
@@ -1,6 +1,6 @@
-@import '../styles/page-stucture/header';
-@import '../styles/page-stucture/page';
-@import '../styles/page-stucture/main-content';
-@import '../styles/page-stucture/footer';
-@import '../styles/page-stucture/menu';
-@import '../styles/page-stucture/museum';
+@import './page-stucture/header';
+@import './page-stucture/page';
+@import './page-stucture/main-content';
+@import './page-stucture/footer';
+@import './page-stucture/menu';
+@import './page-stucture/museum';
