--- a/src/styles/_blocks.scss
+++ b/src/styles/_blocks.scss
@@ -1,6 +1,6 @@
-@import './blocks/top-bar';
-@import './blocks/icon';
-@import './blocks/buttons';
-@import './blocks/section';
-@import './blocks/exhibition';
-@import './blocks/link';
+@import '../styles/blocks/top-bar';
+@import '../styles/blocks/icon';
+@import '../styles/blocks/buttons';
+@import '../styles/blocks/section';
+@import '../styles/blocks/exhibition';
+@import '../styles/blocks/link';
