--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -1,29 +1,22 @@
   /* stylelint-disable */
   #swiper.swiper {
-    width: 100%;
     height: 100%;
-    padding-top: 40px;
-    padding-bottom: 30px;
     overflow: hidden;
 
-    @include on-desktop {
-      padding-top: 56px;
-      margin-left: auto;
-      margin-right: auto;
-      padding-inline: $pad-inline-desktop;
-    }
-
-    @include on-desktop-lg {
-      max-width: 1170px;
-    }
-
     & .swiper-wrapper {
+      padding-bottom: 30px;
+
+      @include on-tablet {
+        padding-bottom: 42px;
+      }
+
       @include on-desktop {
-        box-sizing: content-box;
-        display: flex;
-        flex-wrap: wrap;
-        gap: 30px;
-        justify-content: space-between;
+        @include page-grid;
+
+        box-sizing: border-box;
+        padding: 20px;
+        row-gap: 30px;
+        grid-template-rows: repeat(2, auto);
       }
     }
 
@@ -33,15 +26,10 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      cursor: pointer;
 
       @include hover(transform, scale(1.05)) {
         z-index: 10;
       }
-
-      ;
-
-
 
       &:first-child {
         padding-left: $pad-inline-mobile;
@@ -49,7 +37,6 @@
 
       @include on-tablet {
         height: 543px !important;
-        width: 340px !important;
 
         &:first-child {
           padding-left: $pad-inline-tablet;
@@ -58,13 +45,30 @@
 
       @include on-desktop {
         height: 600px !important;
-        width: 370px !important;
+        width: 100% !important;
         padding: 0 !important;
         margin-right: 0 !important;
 
-        &:nth-child(2),
+        &:nth-child(1) {
+          grid-row: 1;
+          grid-column: span 4;
+        }
+
+        &:nth-child(2) {
+          grid-row: 1;
+          grid-column: 5/-1;
+        }
+
         &:nth-child(3) {
-          width: 770px !important;
+          grid-row: 2;
+          grid-column: span 8;
+          height: 360px !important;
+        }
+
+        &:nth-child(4) {
+          grid-row: 2;
+          grid-column: 9/-1;
+          height: 360px !important;
         }
       }
     }
