hopefully last commit

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
-@import '../styles/utils';
-@import '../styles/fonts';
-@import '../styles/typography';
-@import '../styles/page-structure';
-@import '../styles/content-sections';
-@import '../styles/blocks';
+@import 'utils';
+@import 'fonts';
+@import 'typography';
+@import 'page-structure';
+@import 'content-sections';
+@import 'blocks';
