--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,5 +1,6 @@
+/* stylelint-disable */
 h1 {
-  font-family: 'IBM-PLex-Sans';
+  font-family: "PlayfairDisplay";
   font-weight: 700;
   font-size: 48px;
   line-height: 100%;
@@ -14,7 +15,7 @@ h1 {
 }
 
 h2 {
-  font-family: 'IBM-PLex-Sans';
+  font-family: "PlayfairDisplay";
   font-weight: 700;
   font-size: 38px;
   line-height: 100%;
@@ -29,7 +30,7 @@ h2 {
 }
 
 h3 {
-  font-family: 'IBM-PLex-Sans';
+  font-family: "PlayfairDisplay";
   font-weight: 700;
   font-size: 28px;
   line-height: 120%;
@@ -44,7 +45,7 @@ h3 {
 }
 
 h4 {
-  font-family: 'IBM-PLex-Sans';
+  font-family: "PlayfairDisplay";
   font-weight: 700;
   font-size: 20px;
   line-height: 125%;
@@ -55,23 +56,28 @@ h4 {
 }
 
 h5 {
-  font-family: 'IBM-PLex-Sans';
+  font-family: "PlayfairDisplay";
   font-weight: 700;
   font-size: 20px;
   line-height: 30px;
 }
 
 .main-text {
-  font-family: 'Montserrat';
+  font-family: "Raleway";
   font-weight: 400;
   line-height: 24px;
   font-size: 16px;
 }
 
 .sub-title {
-  font-family: 'Montserrat';
+  font-family: "Raleway";
   font-weight: 400;
   line-height: 24px;
   font-size: 16px;
   color: $orange;
 }
+
+p {
+  font-family: inherit;
+}
+/* stylelint-enable */
