--- a/src/styles/elements/_buttons.scss
+++ b/src/styles/elements/_buttons.scss
@@ -1,11 +1,11 @@
+/* stylelint-disable */
 .main-btn {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 600;
   font-size: 16px;
   line-height: 16px;
   color: $white;
   background-color: $orange;
-  // padding: 22px 78px 22px 79px;
   padding-block: 22px;
   white-space: nowrap;
   text-align: center;
@@ -24,14 +24,13 @@
 }
 
 .secondary-btn {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 16px;
   font-weight: 600;
   line-height: 16px;
   color: $orange;
   background-color: $white;
   border: 1px solid $orange;
-  // padding: 22px 62px;
   padding-block: 22px;
   width: 100%;
   max-height: 60px;
@@ -46,7 +45,7 @@
     display: block;
     width: 20px;
     height: 20px;
-    // background-image: url('/src/images/Icons/orange-arrow.svg');
+    background-image: url('../images/Icons/orange-arrow.svg');
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -54,7 +53,7 @@
   @include hover(color, $dark-orange);
   @include hover(border, 1px solid $dark-orange);
   &:hover::after {
-    // background-image: url('/src/images/Icons/dark-orange-arrow.svg');
+    background-image: url('../images/Icons/dark-orange-arrow.svg');
   }
 
   &:active {
@@ -63,7 +62,7 @@
   }
 
   &:active::after {
-    // background-image: url('/src/images/Icons/light-orange-arrow.svg');
+    background-image: url('../images/Icons/light-orange-arrow.svg');
   }
 
   &:disabled {
@@ -73,7 +72,7 @@
 }
 
 .lang-btn {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Raleway", sans-serif;
   text-transform: uppercase;
   color: $white;
   font-size: 16px;
@@ -107,3 +106,4 @@
     }
   }
 }
+/* stylelint-enable */
