--- a/src/styles/elements/_exhibition-card.scss
+++ b/src/styles/elements/_exhibition-card.scss
@@ -5,7 +5,8 @@
 
   @include onTable {
     grid-column: span 3;
-    // @include pageGrid;
+    
+    @include pageGrid;
 
     &:not(:last-of-type) {
       margin-bottom: 0;
@@ -17,7 +18,6 @@
   }
 
   &__link {
-
     @include onTable{
       grid-column: span 6;
     }
@@ -38,6 +38,7 @@
       max-height: 420px;
       justify-self: stretch;
       margin-bottom: 30px;
+
       // width: 100%;
       // max-height: 484px;
       // height: 100%;
@@ -76,6 +77,10 @@
       grid-column: span 6;
     }
 
+    @media (min-width: 738px) and (max-width: 880px) {
+      height: 60px;
+    }
+
     @include onDesktop {
       grid-column: span 12;
     }
@@ -98,6 +103,7 @@
   &__btn {
     height: 60px;
     grid-column: span 6;
+    align-self: self-end;
 
     @include onDesktop {
       width: calc(50% - 15px);
