--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,15 +3,15 @@
 @import './elements/index';
 @import './sectoins/index';
 @import './fonts';
-
+/* stylelint-disable */
 html {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Raleway", sans-serif;
   background-color: $white;
   font-size: 16px;
   scroll-behavior: smooth;
 
-   &:has(.mobile-menu:target) {
+  &:has(.mobile-menu:target) {
     overflow: hidden;
   }
 }
-
+/* stylelint-enable */
