--- a/src/styles/sectoins/_first.scss
+++ b/src/styles/sectoins/_first.scss
@@ -2,7 +2,7 @@
   background-color: $bg-green;
   color: $white;
   padding-top: 50px;
-  // position: relative;
+
 
   @include onTable {
     padding-top: 100px;
@@ -10,6 +10,7 @@
 
   &__wrap {
     @include pageGrid;
+
     position: relative;
   }
 
@@ -90,12 +91,13 @@
       }
     }
   }
-
+/* stylelint-disable */
   &__line-text {
-    font-family: 'IBM-PLex-Sans';
+    font-family: "PlayfairDisplay", sans-serif;
     font-weight: 700;
     font-size: 14px;
     line-height: 17.5px;
     white-space: nowrap;
   }
 }
+/* stylelint-enable */
