--- a/src/styles/sectoins/_footer.scss
+++ b/src/styles/sectoins/_footer.scss
@@ -1,3 +1,4 @@
+/* stylelint-disable */
 .footer {
   background-color: $bg-green;
   color: $white;
@@ -17,13 +18,12 @@
   }
 
   &__left {
-
     @include onTable {
-      grid-column: 1 / 3 ;
+      grid-column: 1 / 3;
     }
 
     @include onDesktop {
-      grid-column: 1 / 4 ;
+      grid-column: 1 / 4;
     }
   }
 
@@ -56,28 +56,27 @@
 
   &__icon {
     padding: 5px;
+
     @include hover(opacity, 0.6);
   }
 
   &__center {
-
     @include onTable {
-      grid-column: 3 / 5 ;
+      grid-column: 3 / 5;
     }
 
     @include onDesktop {
-      grid-column: 5 / 7 ;
+      grid-column: 5 / 7;
     }
   }
 
   &__right {
-
     @include onTable {
-      grid-column: 5 / 7 ;
+      grid-column: 5 / 7;
     }
 
     @include onDesktop {
-      grid-column: 9 / 11 ;
+      grid-column: 9 / 11;
     }
   }
 
@@ -87,7 +86,7 @@
   }
 
   &__nav ul li {
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Raleway", sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
@@ -101,25 +100,24 @@
     position: relative;
     font-size: 14px;
 
-    @media (min-width:330px) {
+    @media (min-width: 330px) {
       gap: 22px;
     }
 
     @include onDesktop {
       @include pageGrid;
+
       margin-top: 70px;
     }
   }
 
   &__copyright {
-
     @include onDesktop {
       grid-column: 1 / 3;
     }
   }
 
   &__terms {
-
     @include onDesktop {
       grid-column: 3 / 5;
     }
@@ -135,3 +133,4 @@
     @include hover(opacity, 0.6);
   }
 }
+/* stylelint-enable */
