--- a/src/styles/sectoins/_visit.scss
+++ b/src/styles/sectoins/_visit.scss
@@ -9,7 +9,7 @@
 
   @include onDesktop {
     padding-block: 205px;
-    // background-image: url('../../images/visit-bg.png');
+    background-image: url('../images/visit-bg.png');
     background-repeat: no-repeat;
     background-size: contain;
   }
@@ -48,8 +48,6 @@
   }
 
   &__btn {
-
-
     @include onTable {
       grid-column: 1 / 4;
     }
