--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,20 +1,22 @@
+/* stylelint-disable */
 @font-face {
-  font-family: 'Montserrat';
-  src: url('../fonts/Montserrat/Montserrat-Regular.woff') format('woff');
+  font-family: 'Raleway';
+  src: url('../fonts/Raleway/Raleway-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Montserrat';
-  src: url('../fonts/Montserrat/Montserrat-SemiBold.woff') format('woff');
+  font-family: 'Raleway';
+  src: url('../fonts/Raleway/Raleway-SemiBold.woff') format('woff');
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'IBM-PLex-Sans';
-  src: url('../fonts/IBM-PLex-Sans/IBMPlexSans-Bold.woff') format('woff');
+  font-family: 'PlayfairDisplay';
+  src: url('../fonts/PlayfairDisplay/PlayfairDisplay-Black.woff') format('woff');
   font-weight: 700;
   font-style: normal;
 }
+/* stylelint-enable */
