--- a/src/styles/elements/_nav.scss
+++ b/src/styles/elements/_nav.scss
@@ -13,9 +13,9 @@
       gap: 60px;
     }
   }
-
+/* stylelint-disable */
   &__item {
-    font-family: 'IBM-PLex-Sans';
+    font-family: "PlayfairDisplay", sans-serif;
     font-size: 20px;
     font-weight: 700;
     line-height: 30px;
@@ -25,17 +25,17 @@
       line-height: 57.6px;
     }
   }
-
+/* stylelint-enable */
   &__link {
     position: relative;
 
-    &::after{
-      content: "";
+    &::after {
+      content: '';
       transform-origin: 1;
       background-color: $white;
       width: 100%;
       height: 1px;
-      transition: transform .3s;
+      transition: transform 0.3s;
       display: block;
       position: absolute;
       bottom: 0;
