--- a/src/styles/sectoins/_events.scss
+++ b/src/styles/sectoins/_events.scss
@@ -1,16 +1,15 @@
 .events {
-  padding-bottom: 90;
+  padding-bottom: 90px;
 
   @include onTable {
-    padding-bottom: 100;
+    padding-bottom: 100px;
   }
 
   @include onDesktop {
-    padding-bottom: 110;
+    padding-bottom: 110px;
   }
 
   &__wrap {
-
     @include onTable {
       @include pageGrid;
     }
