--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -12,6 +12,7 @@
 
   &__img {
     height: 210px;
+    transition: transform var(--transition);
 
     @include on-tablet {
       height: 520px;
@@ -22,6 +23,10 @@
       height: 520px;
       grid-column: span 7;
     }
+  }
+
+  &__img:hover {
+    transform: scale(0.98);
   }
 
   &__img img {
