--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,6 +1,4 @@
 .menu {
-  pointer-events: all;
-
   &__wrapper {
     @include grid-container;
 
@@ -38,6 +36,7 @@
       grid-column: span 6;
       gap: 102px;
       border-right: 1px solid $on-dark-bg;
+      font-size: 22px;
     }
   }
 
@@ -48,6 +47,7 @@
 
   &__nav {
     margin-bottom: 24px;
+    color: $on-dark-bg;
 
     @include on-tablet {
       border-right: 1px solid $on-dark-bg;
