--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  scroll-behavior: smooth;
+}
+
 .container {
   padding-inline: var(--padding-inline);
 }
