--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,3 +15,8 @@
 @import './blocks/lecture';
 @import './blocks/galery';
 @import './blocks/dots';
+@import './blocks/subscription';
+@import './blocks/links';
+@import './blocks/contacts';
+@import './blocks/touch';
+@import './blocks/footer';
