--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -34,6 +34,35 @@
     &:target {
       opacity: 1;
       z-index: 2;
+      pointer-events: all;
     }
+  }
+
+  &__to-top {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: fixed;
+    right: var(--padding-inline);
+    bottom: 25%;
+
+    width: 50px;
+    height: 50px;
+    border: 1px solid $green;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.1);
+
+    transition: opacity var(--transition);
+    opacity: 0;
+    pointer-events: none;
+
+    z-index: 2;
+    cursor: pointer;
+  }
+
+  &__arrow-up {
+    width: 10px;
+    height: 12px;
   }
 }
