--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,24 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "utils/mixins";
+@import "utils/vars";
+@import "utils/reset";
+
+@import "blocks/container";
+@import "blocks/header";
+@import "blocks/menu";
+@import "blocks/tickets";
+@import "blocks/events";
+@import "blocks/current";
+@import "blocks/lections";
+@import "blocks/gallery";
+@import "blocks/subscribe";
+@import "blocks/work";
+@import "blocks/footer";
+@import "blocks/nav";
+
+html {
+  scroll-behavior: smooth;
+}
 
 body {
-  background: $c-gray;
+  font-family: "IBM Plex Sans", "Montserrat", sans-serif;
 }
