--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,8 @@
-$c-gray: #eee;
+$c-gray: #fff;
+$c-black: #000;
+$c-green: #1a5a4c;
+
+$c-main-red: #f14a27;
+$c-main-title: #0f0e08;
+$c-main-desc: #4e4e4e;
+$c-main-text: #687480;
